--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.22.3",
     "rollup-plugin-node-polyfills": "^0.2.1",
-    "shadcn-ui": "^0.8.0"
+    "shadcn-ui": "^0.8.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
